--- a/src/App.css
+++ b/src/App.css
@@ -574,7 +574,6 @@
 }
 
 .resume-section {
-  margin-bottom: 2.5rem;
   padding-bottom: 2.5rem;
   border-bottom: none;
 }
@@ -586,7 +585,7 @@
 .resume-left-column {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 
 .resume-right-column {
@@ -621,7 +620,7 @@
 .resume-section-title {
   font-size: 1.25rem;
   font-weight: 600;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
   color: #000;
 }
 
